[tool.poetry]
name = "prusa_exporter"
version = "0.1.0"
description = "A Prometheus exporter for Prusa telemetry"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.12.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.12b0"
flake8-import-order = "^0.18.1"
pep8-naming = "^0.12.1"
flakehell = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 300

[tool.flakehell]
max_line_length = 300
exclude = ["__pycache__", ".venv", "docs"]
# E203: Whitespace before ':'
ignore = "E203"
extended_default_ignore=[]

[tool.flakehell.plugins]
"*" = ["+*"]
